--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <title>Drink Game</title>
 
+        <meta name="viewport" content="width=device-width, intial-scale=1.0">
+
         <link href="Beer.css" type="text/css" rel="stylesheet">
         <script type="text/javascript" src="BeerGame.js" defer> </script>         
         <script type="text/javascript" src="Beer.js" defer> </script> 
