--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, intial-scale=1.0">
 
         <link href="Beer.css" type="text/css" rel="stylesheet">
+        <script type="text/javascript" src="cookie.js" defer> </script>         
         <script type="text/javascript" src="BeerGame.js" defer> </script>         
         <script type="text/javascript" src="Beer.js" defer> </script> 
         <script type="text/javascript" src="BeerClicks.js" defer> </script> 
