--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="col-sm-12">
                         <h2>Tryck på ett kort och välj händelse till kortet.</h2>   
                         <p>eller välj en standard..</p>          
-                        <button type="button" class="btn btn-info" id="standard-btn">Standard</button>              
+                        <button type="button" class="btn btn-info">Standard</button>              
                     </div>
                 </div>
                 <div class="row text-center">
@@ -70,8 +70,8 @@
                         <img src="./Kortlek/31.png" alt="Seven">  
                     </div>
                 </div>
-                <div class="row text-center">
-                    <div class="col-sm-3" id="Six-div">
+                <div class="row">
+                    <div class="col-sm-3 text-center" id="Six-div">
                         <img src="./Kortlek/35.png" alt="Six">    
                     </div>
                     <div class="col-sm-3" id="Red-div">
