--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="col-sm-12">
                         <h2>Tryck på ett kort och välj händelse till kortet.</h2>   
                         <p>eller välj en standard..</p>          
-                        <button type="button" class="btn btn-info">Standard</button>              
+                        <button type="button" class="btn btn-info" id="standard-btn">Standard</button>              
                     </div>
                 </div>
                 <div class="row text-center">
